manifests/kustomize/options/istio/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: model-registry
spec:
  gateways:
  - kubeflow-gateway
  hosts:
  - '*'
  http:
  - match:
      - uri:
          prefix: /model-registry/
    rewrite:
      uri: /
    route:
    - destination:
        host: model-registry-service.kubeflow.svc.cluster.local
        port:
          number: 8080
  tcp:
  - match:
      - port: 9090
    route:
      - destination:
          host: model-registry-service.kubeflow.svc.cluster.local
          port:
            number: 9090
